<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/de.Psychologie.socialintelligence"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PopPollActivity"
    tools:ignore="HardcodedText" >

    <com.markupartist.android.widget.ActionBar
        android:id="@+id/actionbar"
        style="@style/ActionBar"
        app:title="@string/title_activity_week" />
    
    <TextView
        android:id="@+id/txtPopPollInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_gravity="center_horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/Anzahl"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/countContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="73dp"
            android:paddingRight="10dp"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <net.simonvt.numberpicker.NumberPicker
            android:id="@+id/hourPicker"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="73dp"
            android:text=":"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <net.simonvt.numberpicker.NumberPicker
            android:id="@+id/minutePicker"
            android:layout_width="60dp"
            android:layout_height="wrap_content" >
        </net.simonvt.numberpicker.NumberPicker>
    </LinearLayout>
    <!--
      <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            

                <requestFocus />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_marginTop="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAppearance="?android:attr/textAppearanceMedium" />

    
            <TimePicker
                android:id="@+id/timePicker"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
          
            <net.simonvt.numberpicker.NumberPicker
		        android:id="@+id/hourPicker"
		        android:layout_width="60dp"
		        android:layout_height="wrap_content" />
            <net.simonvt.numberpicker.NumberPicker
		        android:id="@+id/minutePicker"
		        android:layout_width="60dp"
		        android:layout_height="wrap_content" />

        </TableRow>

    </TableLayout>
    -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:weightSum="2" >

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/snooze_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/snooze" />
        </LinearLayout>

        <Button
            android:id="@+id/ok_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:enabled="false"
            android:text="@string/OK" />
    </RelativeLayout>

</LinearLayout>